--- a/src/app/components/default-login-layout/default-login-layout.component.scss
+++ b/src/app/components/default-login-layout/default-login-layout.component.scss
@@ -5,13 +5,13 @@ main {
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  height: 100vh;
 
   section{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100%;
   }
 
   .main-section{
@@ -20,6 +20,7 @@ main {
     flex-grow: 1;
 
     background-color: $gray-bg;
+    height: 100%;
   }
 
   .form-section{
